--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <main>
     <section id="blog-posts">
       <h2>Latest Posts</h2>
+      <button id="generate-blog-button">Generate New Blog Post</button>
       <div id="posts-container">
         <!-- Blog posts will be dynamically inserted here -->
       </div>
