--- a/index.html
+++ b/index.html
@@ -1,99 +1,61 @@
-// Chat System Enhancements
-let isChatOpen = false;
-const chatMessages = document.getElementById('chatMessages');
-const messageInput = document.getElementById('messageInput');
-const nicknameInput = document.getElementById('nickname');
-const charCount = document.getElementById('charCount');
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anime & Gaming Nexus</title>
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+    <header class="header">
+        <nav class="nav">
+            <a href="#" class="logo">AnimeNexus</a>
+            <div class="nav-links">
+                <a href="#news">News</a>
+                <a href="#chat">Chat</a>
+            </div>
+        </nav>
+    </header>
 
-// Load saved messages and nickname
-let messages = JSON.parse(localStorage.getItem('chatMessages')) || [];
-const savedNickname = localStorage.getItem('chatNickname') || '';
+    <main class="news-container">
+        <h2>Latest Updates</h2>
+        <div class="news-grid">
+            <div class="news-card">
+                <h3>New Anime Season Announcement</h3>
+                <p>Check out the latest releases for Fall 2024!</p>
+                <span class="tag anime">Anime</span>
+            </div>
+            <div class="news-card">
+                <h3>Elden Ring DLC Release Date</h3>
+                <p>Shadow of the Erdtree expansion coming June 2024</p>
+                <span class="tag gaming">Gaming</span>
+            </div>
+            <div class="news-card">
+                <h3>Crunchyroll Original Series</h3>
+                <p>New exclusive anime productions announced</p>
+                <span class="tag anime">Anime</span>
+            </div>
+            <div class="news-card">
+                <h3>Game Awards 2024 Winners</h3>
+                <p>See which anime-inspired games took home awards</p>
+                <span class="tag gaming">Gaming</span>
+            </div>
+        </div>
+    </main>
 
-function initChat() {
-    nicknameInput.value = savedNickname;
-    loadMessages();
-    messageInput.addEventListener('input', updateCharCount);
-    messageInput.addEventListener('keypress', handleTyping);
-}
+    <div class="chat-container">
+        <div class="chat-header" onclick="toggleChat()">Open Chat 💬</div>
+        <div class="chat-body" id="chatMessages"></div>
+        <div class="chat-input">
+            <input type="text" id="nickname" placeholder="Nickname" maxlength="20">
+            <div class="input-group">
+                <input type="text" id="messageInput" placeholder="Type your message..." maxlength="200">
+                <div id="charCount">0/200</div>
+            </div>
+            <button onclick="sendMessage()">Send</button>
+        </div>
+    </div>
 
-function toggleChat() {
-    isChatOpen = !isChatOpen;
-    document.querySelector('.chat-body').style.display = isChatOpen ? 'block' : 'none';
-    document.querySelector('.chat-input').style.display = isChatOpen ? 'flex' : 'none';
-    if (isChatOpen) messageInput.focus();
-}
-
-function sendMessage() {
-    const messageText = messageInput.value.trim();
-    const nickname = nicknameInput.value.trim();
-
-    if (messageText && nickname) {
-        const newMessage = {
-            nickname,
-            text: filterMessage(messageText),
-            timestamp: new Date().toISOString()
-        };
-
-        messages.push(newMessage);
-        if (messages.length > 100) messages.shift(); // Keep only last 100 messages
-        
-        saveMessages();
-        appendMessage(newMessage);
-        messageInput.value = '';
-        updateCharCount();
-        playNotificationSound();
-    }
-}
-
-function filterMessage(text) {
-    const blockedWords = ['badword1', 'badword2', 'badword3'];
-    return text.replace(new RegExp(blockedWords.join('|'), 'gi'), '****');
-}
-
-function appendMessage(message) {
-    const messageElement = document.createElement('div');
-    messageElement.className = 'message';
-    messageElement.innerHTML = `
-        <strong style="color: ${getUserColor(message.nickname)}">
-            ${message.nickname}:
-        </strong> 
-        ${message.text}
-        <small style="opacity:0.7">${new Date(message.timestamp).toLocaleTimeString()}</small>
-    `;
-    chatMessages.appendChild(messageElement);
-    chatMessages.scrollTop = chatMessages.scrollHeight;
-}
-
-function loadMessages() {
-    chatMessages.innerHTML = '';
-    messages.forEach(appendMessage);
-}
-
-function saveMessages() {
-    localStorage.setItem('chatMessages', JSON.stringify(messages));
-    localStorage.setItem('chatNickname', nicknameInput.value);
-}
-
-function getUserColor(username) {
-    const colors = ['#7d5fff', '#00f3ff', '#ff6b6b', '#4ecdc4'];
-    return colors[username.length % colors.length];
-}
-
-function updateCharCount() {
-    charCount.textContent = `${messageInput.value.length}/200`;
-}
-
-function handleTyping(e) {
-    if (e.key === 'Enter' && !e.shiftKey) {
-        e.preventDefault();
-        sendMessage();
-    }
-}
-
-function playNotificationSound() {
-    const audio = new Audio('/sounds/notification.mp3');
-    audio.play().catch(() => { /* Handle audio play restrictions */ });
-}
-
-// Initialize when DOM is loaded
-document.addEventListener('DOMContentLoaded', initChat);
+    <script src="/js/app.js"></script>
+</body>
+</html>
